@@ -1,9 +1,10 @@
 package studio.magemonkey.fabled.dynamic.trigger;
 
+import org.bukkit.entity.LivingEntity;
 import studio.magemonkey.fabled.api.CastData;
 import studio.magemonkey.fabled.api.Settings;
 import studio.magemonkey.fabled.api.event.PlayerCastSkillEvent;
-import org.bukkit.entity.LivingEntity;
+import studio.magemonkey.fabled.api.player.PlayerClass;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -41,15 +42,16 @@ public class SkillCastTrigger implements Trigger<PlayerCastSkillEvent> {
                 .collect(Collectors.toList());
         List<String> blackClasses = classes.stream().filter(c -> c.startsWith("!"))
                 .map(c -> c.substring(1))
-                .collect(Collectors.toList());
+                .toList();
         List<String> blackSkills = skills.stream().filter(c -> c.startsWith("!"))
                 .map(c -> c.substring(1))
-                .collect(Collectors.toList());
-        classes = classes.stream().filter(c -> !c.startsWith("!")).collect(Collectors.toList());
-        skills = skills.stream().filter(c -> !c.startsWith("!")).collect(Collectors.toList());
+                .toList();
+        classes = classes.stream().filter(c -> !c.startsWith("!")).toList();
+        skills = skills.stream().filter(c -> !c.startsWith("!")).toList();
 
         String skillName = event.getSkill().getData().getName();
-        String className = event.getPlayerData().getMainClass().getData().getName();
+        PlayerClass mainClass = event.getPlayerData().getMainClass();
+        String className = mainClass == null ? "" : event.getPlayerData().getMainClass().getData().getName();
         if (!skills.isEmpty() && !skills.contains(skillName)
                 || blackSkills.contains(skillName)) {
             return false;
